# versions-control-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.py
.github/workflows/: release.yml
files/: app.css
src/: main.rs  main_state.rs
src/dialogs/: dialog_state.rs  dialog_template.rs  mod.rs  render_delete_ignore_event_confirmation.rs  render_dialog.rs  render_edit_tag_version_dialog.rs
src/models/: app_versions_http_model.rs  get_envs_model.rs  mod.rs
src/server/: mod.rs  settings_model.rs
src/server/app_ctx/: app_ctx.rs  mod.rs  ssh_private_key_cache.rs
src/server/requests/: get_to_release.rs  mod.rs  set_to_release.rs
src/storage/: mod.rs  selected_env.rs
src/views/: enter_cert.rs  envs_selector.rs  mod.rs  render_dashboard.rs
